# CNS_Assistant

./: .env.example  .gitignore  AGENTS.md  README.md  agent.py  config.yaml  langgraph.json  metadata_extraction_graph.py  pyproject.toml  standard_review_graph.py  tools.json
design_docs/: DEEP_AGENT_SPEC.example.md  DEEP_AGENT_SPEC.md  DEEP_AGENT_SPEC_V2.md  FASTAPI_BFF_PHASE1_API.md  METADATA_EXTRACTION_SUBGRAPH_TOOL_DESIGN.md  MINERU_PDF_PARSE_TOOL_DESIGN.md  STANDARD_DOCUMENT_PIPELINE_FINAL_DESIGN.md  STANDARD_REVIEW_DEEP_AGENTS_FINAL_DESIGN.md  deep_agents_analysis.html  long_memory-exploded.md  module_architecture_review.md  multi_user_runtime_design.md  stream_sse_design.md
memories/: AGENTS.md  preferences.md  project-notes.md
pending_tools/: extract_from_md_new.py  minerU2_2.py
scripts/: final_smoke.py  rebuild_rules_index.py  smoke_test.py  test_fastapi_upload_review.py  test_gbt15034_review.py
tests/: conftest.py  run-019e8128-6f14-7152-92bf-c760183d8231.json  run-019e823d-b00c-7ca2-b4f4-b3527dd81d86.json  test_agent_registration.py  test_api_phase1.py  test_artifacts.py  test_extract_standard_metadata_tool.py  test_langgraph_entrypoints.py  test_llm_client.py  test_metadata_pipeline_integration.py  test_metadata_tracing.py  test_mineru_cover_metadata.py  test_mineru_design_review_fixes.py  test_mineru_images.py  test_mineru_retry_and_progress.py  test_mineru_zip_parser.py  test_parse_file_with_mineru_tool.py  test_prompt_routing.py  test_review_index_backend.py  test_smoke_tools.py  test_standard_review_tool.py  test_streaming_artifacts.py  (+2 more)
(+89 files in other folders)
