[project]
name = "standard-document-assistant"
version = "0.1.0"
description = "Deep Agents based assistant for standard document review, drafting, extraction, and conversion."
requires-python = ">=3.10"
dependencies = [
    "deepagents",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "langchain-qwq",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
documents = [
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
]
mineru = [
    "requests>=2.31.0",
]
extraction = [
    "langextract",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "langgraph-cli[inmem]>=0.3.0",
]

[project.scripts]
standard-doc-assistant = "standard_document_assistant.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
